# walkanalysis

./: Cargo.toml
wa_plugin/: Cargo.toml  README.md  bundler.toml  run.sh
wa_plugin/src/: colors.rs  editor.rs  exercises.rs  fonts.rs  forms.rs  lib.rs  main.rs  styles.rs
walkanalysis/: Cargo.toml
walkanalysis/src/: lib.rs
walkanalysis/src/analysis/: analysis.rs  correction.rs  mistake.rs  mod.rs
walkanalysis/src/exercise/: analysis.rs  arpeggios_up.rs  chord_tones.rs  mod.rs  two_beat.rs
walkanalysis/src/form/: chord.rs  form.rs  interval.rs  key.rs  mod.rs  note.rs  scale.rs
walkanalysis/src/form/songs/: autumn_leaves.rs  but_beautiful.rs  mod.rs  test.rs
walkanalysis/src/transcribe/: transcribe.rs
walkanalysis/tests/: analysis.rs  chords.rs  form.rs  keys.rs  notes.rs  transcription.rs
walkanalysis/tests/data/forms/: autumn_leaves.json
walkanalysis/tests/scripts/: form.py  show_beat_data_per_beat.py  show_beat_data_time_domain.py
