[package]
name = "wa_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Pieter Staal <your@email.com>"]
license = "GPL-3.0-or-later"
homepage = "example.com"
description = "todo"


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
iced = "0.13.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
walkanalysis = { path = "../walkanalysis" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
